Spacing updates, overflow fixes

--- a/code/react-src/src/App.css
+++ b/code/react-src/src/App.css
@@ -1,5 +1,5 @@
 .App {
-    height: 100vh;
-    width: 100vw;
-    margin-top: 40.5px;
+    margin-top: 4vh;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
